@@ -2,31 +2,42 @@ package net.congueror.clib.world;
 
 import com.google.common.collect.ImmutableList;
 import com.mojang.serialization.Codec;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
 import net.minecraft.core.Registry;
 import net.minecraft.data.BuiltinRegistries;
-import net.minecraft.data.worldgen.Features;
+import net.minecraft.data.worldgen.features.OreFeatures;
+import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.tags.Tag;
 import net.minecraft.util.valueproviders.UniformInt;
+import net.minecraft.world.entity.animal.Panda;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.biome.BiomeSource;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.levelgen.*;
+import net.minecraft.world.level.levelgen.blockpredicates.BlockPredicate;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.configurations.*;
-import net.minecraft.world.level.levelgen.feature.stateproviders.SimpleStateProvider;
+import net.minecraft.world.level.levelgen.feature.LakeFeature;
+import net.minecraft.world.level.levelgen.feature.configurations.DiskConfiguration;
+import net.minecraft.world.level.levelgen.feature.configurations.GeodeConfiguration;
+import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguration;
+import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
+import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
 import net.minecraft.world.level.levelgen.heightproviders.UniformHeight;
+import net.minecraft.world.level.levelgen.placement.*;
 import net.minecraft.world.level.levelgen.structure.templatesystem.BlockMatchTest;
 import net.minecraft.world.level.levelgen.structure.templatesystem.RuleTest;
 import net.minecraft.world.level.levelgen.structure.templatesystem.TagMatchTest;
 import net.minecraftforge.common.Tags;
 import net.minecraftforge.event.world.BiomeLoadingEvent;
 
+import java.util.List;
 import java.util.Objects;
 
 public class WorldHelper {
@@ -35,8 +46,8 @@ public class WorldHelper {
         throw new IllegalAccessException("Utility Class");
     }
 
-    public static final RuleTest overworld = OreConfiguration.Predicates.NATURAL_STONE;
-    public static final RuleTest nether = OreConfiguration.Predicates.NETHER_ORE_REPLACEABLES;
+    public static final RuleTest overworld = OreFeatures.NATURAL_STONE;
+    public static final RuleTest nether = OreFeatures.NETHER_ORE_REPLACEABLES;
     public static final RuleTest end = new TagMatchTest(Tags.Blocks.END_STONES);
 
     /**
@@ -98,9 +109,14 @@ public class WorldHelper {
      * @param modid   Your mod id
      * @param name    The id of your feature
      * @param feature The Tree Feature
+     * @return
      */
-    public static <FC extends FeatureConfiguration> ConfiguredFeature<FC, ?> registerTree(String modid, String name, ConfiguredFeature<FC, ?> feature) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, new ResourceLocation(modid, name), feature);
+    public static ConfiguredFeature<TreeConfiguration, ?> registerTree(String modid, String name, TreeConfiguration feature) {
+        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, new ResourceLocation(modid, name), Feature.TREE.configured(feature));
+    }
+
+    public static PlacedFeature registerTreePlacement(String modid, String name, ConfiguredFeature<TreeConfiguration, ?> feature, Block sapling, int chance) {
+        return Registry.register(BuiltinRegistries.PLACED_FEATURE, new ResourceLocation(modid, name), feature.placed(BlockPredicateFilter.forPredicate(BlockPredicate.wouldSurvive(sapling.defaultBlockState(), BlockPos.ZERO)), CountPlacement.of(chance)));
     }
 
     /**
@@ -112,26 +128,10 @@ public class WorldHelper {
      * @param maxHeight The maximum y value that the ore can spawn at. (Minimum is always the bottom)
      * @param count     How many attempts it will make to spawn the ore each chunk.
      */
-    public static ConfiguredFeature<?, ?> registerConfiguredOre(RuleTest filler, Block block, int veinSize, int maxHeight, int count) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Feature.ORE.configured(
-                        new OreConfiguration(filler, block.defaultBlockState(), veinSize))
-                .rangeUniform(VerticalAnchor.bottom(), VerticalAnchor.absolute(maxHeight)).squared().count(count));
-    }
-
-    /**
-     * Used to register a configured ore feature to the {@link BuiltinRegistries}
-     *
-     * @param filler    The block that will be replaced by the ore. See {@link #blockRuleTest(Block)} or {@link #tagRuleTest(Tag)}
-     * @param block     The ore block
-     * @param veinSize  The maximum amount of blocks that will be adjacent to the ore. Must be greater than 1 for some reason
-     * @param minHeight The minimum y value that the ore can spawn at.
-     * @param maxHeight The maximum y value that the ore can spawn at.
-     * @param count     How many attempts it will make to spawn the ore each chunk.
-     */
-    public static ConfiguredFeature<?, ?> registerConfiguredOre(RuleTest filler, Block block, int veinSize, int minHeight, int maxHeight, int count) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Feature.ORE.configured(
-                        new OreConfiguration(filler, block.defaultBlockState(), veinSize))
-                .rangeUniform(VerticalAnchor.absolute(minHeight), VerticalAnchor.absolute(maxHeight)).squared().count(count));
+    public static PlacedFeature registerConfiguredOre(RuleTest filler, Block block, int veinSize, int minHeight, int maxHeight, int count) {
+        return Registry.register(BuiltinRegistries.PLACED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Feature.ORE.configured(
+                        new OreConfiguration(filler, block.defaultBlockState(), veinSize)))
+                .placed(List.of(CountPlacement.of(count), InSquarePlacement.spread(), HeightRangePlacement.triangle(VerticalAnchor.absolute(minHeight), VerticalAnchor.absolute(maxHeight)), BiomeFilter.biome())));
     }
 
     /**
@@ -139,10 +139,10 @@ public class WorldHelper {
      *
      * @param block The disk block
      */
-    public static ConfiguredFeature<?, ?> registerConfiguredDisk(Block block) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Feature.DISK.configured(
-                        new DiskConfiguration(block.defaultBlockState(), UniformInt.of(2, 3), 1, ImmutableList.of(Blocks.DIRT.defaultBlockState(), block.defaultBlockState())))
-                .decorated(Features.Decorators.TOP_SOLID_HEIGHTMAP_SQUARE));
+    public static PlacedFeature registerConfiguredDisk(Block block) {
+        return Registry.register(BuiltinRegistries.PLACED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, Objects.requireNonNull(block.getRegistryName()), Feature.DISK.configured(
+                        new DiskConfiguration(block.defaultBlockState(), UniformInt.of(2, 3), 1, ImmutableList.of(Blocks.DIRT.defaultBlockState(), block.defaultBlockState()))))
+                .placed(List.of(InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_TOP_SOLID, BiomeFilter.biome())));
     }
 
     /**
@@ -154,17 +154,20 @@ public class WorldHelper {
      * @param medium  Medium bud block
      * @param large   Large bud block
      * @param cluster Cluster block
-     * @param maxY    Maximum Y value this feature will generate at.
-     * @param rarity  The rarity of this geode. The greater the number the more rare it is.
+     * @param rarity  The rarity of this geode. (normal = 24)
+     * @return
      */
-    public static ConfiguredFeature<?, ?> registerConfiguredGeode(Block block, Block budding, Block small, Block medium, Block large, Block cluster, int maxY, int rarity) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, block.getRegistryName() + "_geode", Feature.GEODE.configured(
-                new GeodeConfiguration(new GeodeBlockSettings(new SimpleStateProvider(Blocks.AIR.defaultBlockState()),
-                        new SimpleStateProvider(block.defaultBlockState()), new SimpleStateProvider(budding.defaultBlockState()),
-                        new SimpleStateProvider(Blocks.CALCITE.defaultBlockState()), new SimpleStateProvider(Blocks.SMOOTH_BASALT.defaultBlockState()),
-                        ImmutableList.of(small.defaultBlockState(), medium.defaultBlockState(), large.defaultBlockState(), cluster.defaultBlockState()),
-                        BlockTags.FEATURES_CANNOT_REPLACE.getName(), BlockTags.GEODE_INVALID_BLOCKS.getName()), new GeodeLayerSettings(1.7D, 2.2D, 3.2D, 4.2D), new GeodeCrackSettings(0.0D, 2.0D, 2), 0.35D, 0.083D, true, UniformInt.of(4, 6), UniformInt.of(3, 4), UniformInt.of(1, 2), -16, 16, 0.05D, 1)).rangeUniform(VerticalAnchor.aboveBottom(6), VerticalAnchor.absolute(maxY)).squared().rarity(rarity));
-
+    public static PlacedFeature registerConfiguredGeode(Block block, Block budding, Block small, Block medium, Block large, Block cluster, int rarity) {
+        return Registry.register(BuiltinRegistries.PLACED_FEATURE, block.getRegistryName() + "_geode", Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, block.getRegistryName() + "_geode", Feature.GEODE.configured(
+                        new GeodeConfiguration(new GeodeBlockSettings(BlockStateProvider.simple(Blocks.AIR.defaultBlockState()),
+                                BlockStateProvider.simple(block.defaultBlockState()), BlockStateProvider.simple(budding.defaultBlockState()),
+                                BlockStateProvider.simple(Blocks.CALCITE.defaultBlockState()), BlockStateProvider.simple(Blocks.SMOOTH_BASALT.defaultBlockState()),
+                                ImmutableList.of(small.defaultBlockState(), medium.defaultBlockState(), large.defaultBlockState(), cluster.defaultBlockState()),
+                                BlockTags.FEATURES_CANNOT_REPLACE.getName(), BlockTags.GEODE_INVALID_BLOCKS.getName()), new GeodeLayerSettings(1.7D, 2.2D, 3.2D, 4.2D),
+                                new GeodeCrackSettings(0.0D, 2.0D, 2), 0.35D, 0.083D, true,
+                                UniformInt.of(4, 6), UniformInt.of(3, 4), UniformInt.of(1, 2),
+                                -16, 16, 0.05D, 1)))
+                .placed(RarityFilter.onAverageOnceEvery(rarity), InSquarePlacement.spread(), HeightRangePlacement.uniform(VerticalAnchor.aboveBottom(6), VerticalAnchor.absolute(30)), BiomeFilter.biome()));
     }
 
     /**
@@ -173,11 +176,17 @@ public class WorldHelper {
      * @param fluid     The fluid's block you want the lake to be filled with.
      * @param maxHeight The maximum height the lake will spawn at.
      * @param chance    The chance that this lake has to spawn. The greater the number the more rare it is.
+     * @return
      */
-    public static ConfiguredFeature<?, ?> registerConfiguredLake(Block fluid, int maxHeight, int chance) {
-        return Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, fluid.getRegistryName() + "_lake", Feature.LAKE.configured(
-                        new BlockStateConfiguration(fluid.defaultBlockState()))
-                .rarity(chance).range(new RangeDecoratorConfiguration(UniformHeight.of(VerticalAnchor.bottom(), VerticalAnchor.absolute(maxHeight)))).squared());
+    public static PlacedFeature registerConfiguredLake(Block fluid, int minHeight, int maxHeight, int chance) {
+        return Registry.register(BuiltinRegistries.PLACED_FEATURE, fluid.getRegistryName() + "_lake", Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, fluid.getRegistryName() + "_lake", Feature.LAKE.configured(
+                        new LakeFeature.Configuration(
+                                BlockStateProvider.simple(fluid.defaultBlockState()), BlockStateProvider.simple(Blocks.STONE.defaultBlockState()))))
+                .placed(RarityFilter.onAverageOnceEvery(chance),
+                        InSquarePlacement.spread(),
+                        HeightRangePlacement.of(UniformHeight.of(VerticalAnchor.absolute(minHeight), VerticalAnchor.absolute(maxHeight))),
+                        EnvironmentScanPlacement.scanningFor(Direction.DOWN, BlockPredicate.allOf(BlockPredicate.not(BlockPredicate.ONLY_IN_AIR_PREDICATE), BlockPredicate.insideWorld(new BlockPos(0, -5, 0))), 32),
+                        SurfaceRelativeThresholdFilter.of(Heightmap.Types.OCEAN_FLOOR_WG, Integer.MIN_VALUE, -5), BiomeFilter.biome()));
     }
 
     /**
@@ -186,10 +195,20 @@ public class WorldHelper {
      * @param e       The {@link BiomeLoadingEvent}
      * @param feature The ore configured feature to be generated.
      */
-    public static void addOre(BiomeLoadingEvent e, ConfiguredFeature<?, ?>... feature) {
-        for (ConfiguredFeature<?, ?> feature1 : feature) {
+    public static void addOre(BiomeLoadingEvent e, PlacedFeature... feature) {
+        for (PlacedFeature feature1 : feature) {
             e.getGeneration().addFeature(GenerationStep.Decoration.UNDERGROUND_ORES, feature1);
         }
+    }
+
+    /**
+     * Generates a tree feature in the world. Use in a {@link BiomeLoadingEvent}
+     *
+     * @param e       The {@link BiomeLoadingEvent}.
+     * @param feature The tree configured feature to be generated.
+     */
+    public static void addTree(BiomeLoadingEvent e, PlacedFeature feature) {
+        e.getGeneration().getFeatures(GenerationStep.Decoration.VEGETAL_DECORATION).add(() -> feature);
     }
 
     /**
@@ -197,11 +216,9 @@ public class WorldHelper {
      *
      * @param e       The {@link BiomeLoadingEvent}
      * @param feature A tree {@link ConfiguredFeature}
-     * @param chance  The chance the tree has to generate in the world, higher the number the more rare.
-     * @param <FC>    {@link TreeConfiguration}
      */
-    public static <FC extends FeatureConfiguration> void addVegetalDecor(BiomeLoadingEvent e, ConfiguredFeature<FC, ?> feature, int chance) {
-        e.getGeneration().getFeatures(GenerationStep.Decoration.VEGETAL_DECORATION).add(() -> feature.decorated(Features.Decorators.HEIGHTMAP_WITH_TREE_THRESHOLD_SQUARED).rarity(chance).squared());
+    public static void addVegetalDecor(BiomeLoadingEvent e, PlacedFeature feature) {
+        e.getGeneration().getFeatures(GenerationStep.Decoration.VEGETAL_DECORATION).add(() -> feature);
     }
 
     /**
@@ -210,8 +227,8 @@ public class WorldHelper {
      * @param e       The {@link BiomeLoadingEvent}
      * @param feature The local modification configured feature to be generated.
      */
-    public static void addLocalMod(BiomeLoadingEvent e, ConfiguredFeature<?, ?>... feature) {
-        for (ConfiguredFeature<?, ?> feature1 : feature) {
+    public static void addLocalMod(BiomeLoadingEvent e, PlacedFeature... feature) {
+        for (PlacedFeature feature1 : feature) {
             e.getGeneration().addFeature(GenerationStep.Decoration.LOCAL_MODIFICATIONS, feature1);
         }
     }
